Upload old landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-This page intentionally left blank
+<html>
+<head>
+<title>About Matt Sanford</title>
+<style>
+
+a {
+  color: black;
+  text-decoration: none;
+  line-height: 1.2em;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+#split-top {
+  height: 300px;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  background: url(static/split-top.png);
+}
+
+#split-logo {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  height: 100px;
+}
+
+#split-logo img {
+  height: 400px;
+  width: 400px;
+  border: 0px;
+  margin-left: -200px;
+}
+
+#split-bottom {
+  background: url(static/split-bottom.png) top left repeat-x;
+  background-color: white;
+  width: 100%;
+  position: absolute;
+  top: 300px;
+  left: 0px;
+  height: 300px;
+}
+
+.content {
+  position: relative;
+  width: 400px;
+  margin-top: 300px;
+  margin-left: 30%;
+  padding: 60px 0px 20px 0px; 
+  color: black;
+}
+
+.content h2 {
+  font-family: Georgia, Garmond, serif;
+  font-size: 18pt;
+  font-variant: small-caps;
+  text-align: center;
+  letter-spacing: 1.5em;
+  border-bottom: 1px solid black;
+}
+
+.content p {
+  padding: 0px 8px;
+}
+.content a {
+  font-variant: small-caps;
+}
+
+.content a:visited {
+  color: #333;
+}
+
+</style>
+</head>
+<body>
+
+<div id="split-top"></div>
+<div id="split-bottom"></div>
+<div id="split-logo">
+  <img src="static/split-logo.png" align="center"/>
+</div>
+
+<div id="content-left" class="content">
+  <h2>About</h2>
+  <p>I'm a programmer at <a href="http://twitter.com">Twitter</a> with a hobby interest in languages and linguistics. I'm a former developer of web crawlers and some-times web designer with a focus on typography. For my random ramblings check me out either as <a href="http://twitter.com/mzsanford">@mzsanford</a> on Twitter, or on my <a href="http://blog.mzsanford.com/">blog</a>.</p>
+</div>
+
+<div id="footer">
+  <span id="copyright">&copy; Copyright 2010 Matt Sanford</span>
+</div>
+
+</body>
+</html>
