--- a/gaga/index.html
+++ b/gaga/index.html
@@ -17,7 +17,10 @@
 <body>
 
   <h1><span>@LadyGaga</span> followers</h1>
-  <div id="wrapper"><div id="counter"></div></div>
+  <div id="wrapper">
+    <div id="counter"></div>
+    <p></p>
+  </div>
 
   <script type="text/javascript">
   //<![CDATA[
