Try out an image

--- a/gaga/index.html
+++ b/gaga/index.html
@@ -36,11 +36,11 @@
       height: 1500,
       theme: {
         shell: {
-          background: '#333',
+          background: '#000',
           color: '#ffffff'
         },
         tweets: {
-          background: '#333',
+          background: '#000',
           color: '#fff',
           links: '#3cf'
         }
@@ -57,6 +57,10 @@
       }
     }).render().start();
     </script>
+  </div>
+
+  <div id="footer">
+    <img src="img/lady-gaga.jpg" />
   </div>
 
   <script type="text/javascript">
