One more time! We're gonna celebrate

--- a/gaga/index.html
+++ b/gaga/index.html
@@ -22,6 +22,8 @@
     <p></p>
   </div>
 
+  <div style="margin-top: 80px;">&nbsp;</div>
+
   <div id="widget">
     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
     <script>
@@ -59,10 +61,6 @@
     </script>
   </div>
 
-  <div id="footer">
-    <img src="img/lady-gaga.jpg" />
-  </div>
-
   <script type="text/javascript">
   //<![CDATA[
 
@@ -90,7 +88,7 @@
     sendRequest();
     window.setInterval(function() {
       sendRequest();
-    }, 1000);
+    }, 1500);
   });
 
   //]]>
